fixed white gap between border and padding

--- a/src/components/Cards.module.css
+++ b/src/components/Cards.module.css
@@ -2,7 +2,6 @@
   background-color: #003459;
   display: flex;
   flex-direction: column;
-  /* flex-wrap: wrap; */
   justify-content: center;
   gap: 15px;
   padding: 0 15%;
@@ -16,11 +15,7 @@
   gap: 15px;
   direction: ltr;
 }
-/* .cards .card:nth-of-type(1){
-    background: 
-    linear-gradient(#013E6A, #013E6A) padding-box,
-    linear-gradient(to bottom right, #07DA89, #5DF0FB) border-box;
-} */
+
 @media (max-width: 1000px) {
   .cards {
     padding: 0 10%;
