--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -5,81 +5,23 @@
 }
 
 .nav{
-    /* display: flex;
+    display: flex;
     flex-direction: row;
     font-weight: 300;
     color: white;
-    padding: 2vh 2vw; */
-    /* background: inherit;
-    border-radius: 15px;
-    border: 1px solid rgba(43, 43, 43, 0.568);
-    position: absolute;
-    overflow: hidden; */
-
-    /* background: rgba(255, 255, 255, 0.2);
-    border-radius: 16px;
-    box-shadow: 0 4px 30px rgb(0 0 0 / 10%);
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
-    border: 1px solid rgba(255, 255, 255, 0.3);
-
-    background-image: initial;
-    background-color: rgba(20, 22, 23, 0.2);
-    box-shadow: rgb(0 0 0 / 10%) 0px 4px 30px;
-     */
-     /* box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.2); */
-  /* font-size: 2rem; */
-  /* height: 220px; */
-  /* overflow: hidden;
-  position: relative; */
-  /* width: 370px; */
-
-  /* box-shadow: 0 0 1rem 0 rgb(0 0 0 / 20%);  */
-  /* font-size: 2rem; */
-  /* height: 220px; */
-  /* width: 370px; */
-  display: flex;
-  flex-direction: row;
-  font-weight: 300;
-  color: white;
-  padding: 2vh 2vw;
-  box-shadow: 0 0 1rem 0 rgb(0 0 0 / 20%);
-  /* font-size: 2rem; */
-  /* height: 220px; */
-  overflow: hidden;
-  position: relative;
-  /* background-clip: padding-box; */
-  /* width: 370px; */
-  z-index: 1;
-  right: 0;
-  border-bottom: solid 2px #00A8E8;
-  /* box-shadow: 0 0 0 10px #f3f5f6 inset; */
-  /* border-color: transparent; */
-
+    padding: 2vh 2vw;
+    box-shadow: 0 0 1rem 0 rgb(0 0 0 / 20%);
+    overflow: hidden;
+    position: relative;
+    z-index: 1;
+    right: 0;
+    outline: 2px solid #00A8E8;
 }
 .nav:before{
-    /* position: absolute;
-    content: '';
-    background: inherit;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    box-shadow: inset 0 0 0 3000px rgba(150, 150, 150, 0.192);
-    filter: blur(10px);
-    border-radius: 15px; */
-
-    /* background-color: rgba(255, 255, 255, 0.3);
-  backdrop-filter: blur(10px) saturate(100%) contrast(45%) brightness(130%);
-  content: '';
-  height: 100%;
-  position: absolute;
-  width: 100%; */
   background-color: rgba(0, 0, 0, 0.15);
-  -webkit-backdrop-filter: blur(10px) saturate(100%) contrast(45%) brightness(130%);
+  -webkit-backdrop-filter: blur(6px) saturate(180%) contrast(60%) brightness(100%);
   backdrop-filter: blur(6px) saturate(180%) contrast(60%) brightness(100%);
   content: '';
-  /* height: 100%; */
   top: 0;
   position: absolute;
   width: 100%;
@@ -167,11 +109,8 @@ a{
     display: none;
     position: absolute;
     bottom: -38px;
-    /* left: 0; */
     filter: blur(4px);
 }
 @media (max-width: 1000px) {
-    /* .cards{
-        padding: 0 10%;
-    } */
+
   }
